Fixing compat issues for some JDK/JRE impls